name:          stacker
version:       0.1.0
cabal-version: >= 1.8
build-type:    Simple
author:        Jim McStanton
maintainer:    jim@jhmcstanton.com
copyright:     2021 Jim McStanton
license:       AGPL-3
license-file:  LICENSE
extra-source-files:
    README.md
    CHANGELOG.md

executable          stacker
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , scotty
