name:          stacker
version:       0.5.0
cabal-version: >= 1.8
build-type:    Simple
author:        Jim McStanton
maintainer:    jim@jhmcstanton.com
copyright:     2021 Jim McStanton
license:       AGPL-3
license-file:  LICENSE
extra-source-files:
    README.md
    CHANGELOG.md

executable              stacker
    hs-source-dirs:     .
    main-is:            Main.hs
    ghc-options:        -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:         OverloadedStrings
    build-depends:      base                    >= 4      && < 5
                      , aeson
                      , containers
                      , http-types
                      , lrucache
                      , protolude
                      , scotty
                      , scotty-cookie
                      , text
                      , uuid
                      , wai
                      , wai-extra
                      , wai-websockets
                      , warp
                      , websockets

    default-extensions: NoImplicitPrelude
                      , OverloadedStrings
                      , ScopedTypeVariables

    other-modules:      Data.Queue
                      , Data.Types