cabal-version: 3.4
name:          stacker
version:       0.6.0
build-type:    Simple
author:        Jim McStanton
maintainer:    jim@jhmcstanton.com
copyright:     2021 Jim McStanton
license:       AGPL-3.0-or-later
license-file:  LICENSE
extra-doc-files:
    README.md
    CHANGELOG.md

executable              stacker
    hs-source-dirs:     .
    main-is:            Main.hs
    ghc-options:        -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    default-extensions: OverloadedStrings
    build-depends:      base                    >= 4
                      , aeson
                      , containers
                      , http-types
                      , lrucache
                      , protolude
                      , scotty
                      , text                    < 2
                      , uuid
                      , wai
                      , wai-extra
                      , wai-websockets
                      , warp
                      , websockets

    default-extensions: NoImplicitPrelude
                      , OverloadedStrings
                      , ScopedTypeVariables

    other-modules:      Data.Queue
                      , Data.Types
